feat: kill kDrive_client as well

--- a/installer/windows/kDriveInstaller/Components/AppComponents.wxs
+++ b/installer/windows/kDriveInstaller/Components/AppComponents.wxs
@@ -14,7 +14,7 @@
                 <File Id="CleanUpAppData" Source="CleanUpAppData.ps1" />
                 <RegistryValue Root="HKCU" Key="Software\Infomaniak\kDrive" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
             </Component>
-            <Component Guid="{C8A1C31B-AFBC-4B2F-ABA0-A8E73E8EA9C0}">
+            <Component>
                 <File Source="$(desktop-kDriveDir)/build-windows/install/bin/kDrive_client.exe" Checksum="yes" />
             </Component>
         </ComponentGroup>
