--- a/src/gui4/windows/kDrive client/kDrive client/OnBoardingWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/OnBoardingWindow.xaml
@@ -17,7 +17,7 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<Window x:Class="Infomaniak.kDrive.OnBoardingWindow"
+<Window x:Class="Infomaniak.kDrive.OnBoarding.OnBoardingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="using:Infomaniak.kDrive"
@@ -25,15 +25,54 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModel="using:Infomaniak.kDrive.ViewModels"
         xmlns:converters="using:Infomaniak.kDrive.Converters"
+        xmlns:customControls="using:Infomaniak.kDrive.CustomControls"
         mc:Ignorable="d"
         Title="kDrive">
 
     <Window.SystemBackdrop>
-        <!--<DesktopAcrylicBackdrop/> -->
-        <!-- <MicaBackdrop Kind="BaseAlt or Base"/> -->
         <MicaBackdrop Kind="BaseAlt" />
     </Window.SystemBackdrop>
     <Grid>
-        <TextBlock> Hello </TextBlock>
+        <Grid.RowDefinitions>
+            <!-- App title bar -->
+            <RowDefinition Height="auto" />
+            <!-- App title bar -->
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100*" />
+            <ColumnDefinition Width="38*" />
+        </Grid.ColumnDefinitions>
+
+        <!-- Set the backgrounds -->
+        <Border x:Name="AppTitleBar"
+                Grid.Row="0"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}">
+        </Border>
+        <Border  Grid.Row="1"
+                 Grid.Column="0"
+                 Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}">
+        </Border>
+        <Border Grid.Row="1"
+                Grid.Column="1"
+                Background="{ThemeResource LayerFillColorDefaultBrush}">
+        </Border>
+        <customControls:AppTitleBarLogo Grid.Column="0"
+                                        Margin="8,8,0,0" />
+
+        <Image Grid.Row="1"
+               Grid.Column="2"
+               Stretch="Uniform"
+               MaxHeight="120"
+               >
+            <Image.Source>
+                <SvgImageSource UriSource="ms-appx:///Assets/Images/folder.svg" />
+            </Image.Source>
+        </Image>
+        <Frame Grid.Row="1"
+               Grid.Column="0"
+               x:Name="ContentFrame" />
     </Grid>
 </Window>
