feat(ui): enhance OnBoardingWindow and update WelcomePage
Updated OnBoardingWindow.xaml to replace an Image with a Border featuring a RadialGradientBrush.
Changed _onBoardingViewModel in WelcomePage.xaml.cs to a nullable type to prevent null reference exceptions.

--- a/src/gui4/windows/kDrive client/kDrive client/Pages/ErrorPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/ErrorPage.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page x:Class="Infomaniak.kDrive.ErrorPage"
+<Page x:Class="Infomaniak.kDrive.Pages.ErrorPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:Infomaniak.kDrive"
