--- a/src/gui4/windows/kDrive client/kDrive client/OnBoardingWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/OnBoardingWindow.xaml
@@ -65,14 +65,31 @@
         <Image Grid.Row="1"
                Grid.Column="2"
                Stretch="Uniform"
-               MaxHeight="120"
-               >
+               MaxHeight="120">
             <Image.Source>
                 <SvgImageSource UriSource="ms-appx:///Assets/Images/folder.svg" />
             </Image.Source>
         </Image>
-        <Frame Grid.Row="1"
-               Grid.Column="0"
-               x:Name="ContentFrame" />
+        <Border Grid.Row="1"
+                Grid.Column="0">
+            <Border.Background>
+                <RadialGradientBrush MappingMode="RelativeToBoundingBox"
+                                     Center="-0.3,1.3"
+                                     RadiusX="5"
+                                     RadiusY="5"
+                                     GradientOrigin="-0.3,1.3"
+                                     SpreadMethod="Pad">
+
+                    <GradientStop Color="#5C89F7"
+                                  Offset="0" />
+                    <GradientStop Color="{ThemeResource LayerFillColorDefault}"
+                                  Offset="0.1" />
+                    <GradientStop Color="Transparent"
+                                  Offset="0.2" />
+                </RadialGradientBrush>
+            </Border.Background>
+
+            <Frame x:Name="ContentFrame" />
+        </Border>
     </Grid>
 </Window>
