--- a/src/gui4/windows/kDrive client/kDrive client/Pages/ActivityPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/ActivityPage.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page x:Class="Infomaniak.kDrive.ActivityPage"
+<Page x:Class="Infomaniak.kDrive.Pages.ActivityPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:Infomaniak.kDrive"
