--- a/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
@@ -17,7 +17,7 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<Page x:Class="Infomaniak.kDrive.HomePage"
+<Page x:Class="Infomaniak.kDrive.Pages.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:Infomaniak.kDrive"
