--- a/src/gui4/windows/kDrive client/kDrive client/Pages/Onboarding/FinishPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/Onboarding/FinishPage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Page x:Class="Infomaniak.kDrive.Pages.Onboarding.FinishPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -15,27 +14,23 @@
                     VerticalAlignment="Center">
 
             <!-- Titre -->
-            <TextBlock Text="Tout est prêt !"
+            <TextBlock x:Uid="Page_Onboarding_FinishPage_Title"
                        FontSize="24"
                        FontWeight="Bold"
                        Foreground="{ThemeResource TextFillColorPrimary}" />
 
             <!-- Sous-titre -->
-            <TextBlock FontSize="14"
+            <TextBlock x:Uid="Page_Onboarding_FinishPage_Subtitle"
+                       FontSize="14"
                        TextWrapping="WrapWholeWords"
                        Foreground="{ThemeResource TextFillColorSecondary}"
-                       Margin="0,4,0,8">
-                <Run>Vos fichiers sont prêts à être synchronisés </Run>
-                <LineBreak />
-                <Run>en toute sécurité sur votre ordinateur.</Run>
-            </TextBlock>
+                       Margin="0,4,0,8" />
 
             <!-- Boutons -->
-            <Button Style="{StaticResource Infomaniak.Style.Button.WithBackground}"
+            <Button x:Uid="Page_Onboarding_FinishPage_OpenButton"
+                    Style="{StaticResource Infomaniak.Style.Button.WithBackground}"
                     Margin="0,16,0,0"
-                    Click="FinishButton_Click"
-                    Content="Ouvrir kDrive" />
+                    Click="FinishButton_Click" />
         </StackPanel>
     </Grid>
-
 </Page>
