--- a/src/gui4/windows/kDrive client/kDrive client/Pages/Onboarding/DriveSelectionPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/Onboarding/DriveSelectionPage.xaml
@@ -51,7 +51,8 @@
         </StackPanel>
 
         <!-- Subtitle -->
-        <TextBlock Grid.Row="2"
+        <TextBlock x:Name="Subtitle" 
+            Grid.Row="2"
                    x:Uid="Page_Onboarding_DriveSelectionPage_Subtitle"
                    Margin="0,16,0,8"
                    FontSize="14"
@@ -88,7 +89,8 @@
                             <CheckBox Checked="DriveSelectedCheckBox_Checked"
                                       Unchecked="DriveSelectedCheckBox_Unchecked"
                                       IsChecked="False"
-                                      IsEnabled="{x:Bind Syncs.Count, Converter={StaticResource BooleanToInvertedBooleanConverter}}">
+                                      IsEnabled="{x:Bind Syncs.Count, Converter={StaticResource BooleanToInvertedBooleanConverter}}"
+                                      HorizontalAlignment="Stretch">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Height="14"
                                            Margin="0,0,8,0"
